src/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html {
    font-size: 62.5%;
    font-family: 'Ubuntu', sans-serif;
    scroll-behavior: smooth;
    overflow: hidden;
}
body {
    background: linear-gradient(45deg, rgba(2,0,36,1) 0%,
     rgba(42,139,173,1) 35%, rgba(0,212,255,1) 100%);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    flex-direction: column;
    min-width: 100vw;
    min-height: 100vh;
}
h1{
    text-align: center;
    font-size: 3rem;
    margin-top: 3rem;
}
p {
    text-align: center;
}
.scoreBoard {
    display: flex;
    align-items: center;
    margin-top: 7rem;
    justify-content: center;
}
#score {
    width: auto;
    font-size: 6rem;
    text-align: center;
    justify-self: center;
}
#reset {
    position: absolute;
    left: calc(85% - 1.5rem);
    width: 3rem;
    height: 3rem;
    border-radius: 1.5rem;
    background-color: #FA4872;
}
#reset:hover {
    background-color: #AD2142;
}
#reset span {
    width: 10rem;
    display: inline-block;
    position: relative;
    top: 3rem;
    left: -3.5rem;
    font-size: .8rem;
}
.juego {
    display: flex;
    align-items: center;
    justify-content: space-around;
    width: calc(100% - 2rem);
    margin: 10rem 0 1rem 1rem;
    padding-bottom: 1.5rem;
}
.juego button {
    width: 20%;
    height: 20vw;
    background-color: #2FC5FA;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 20%;
    border: none;

    transition: transform 1s;
}
.juego button:hover {
    background-color: #FA4872;
    transform: scale(110%);
    transition: transform 500ms;
}
#puntaje {
    width: 100%;
    margin-bottom: 5rem;
}
#Rock{
    background-image: url('../assets/rock.png');
}
#Paper {
    background-image: url('../assets/paper.png');
}
#Scissors {
    background-image: url('../assets/scissors.png');
} 
.credits {
    position: absolute;
    bottom: 0;
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: auto;

    background-color: #FAF161;
}
.credits a {
    text-decoration: none;
    color: black;
    font-weight: 400;
    font-size: 1rem;
}
.credits .icons-by {
    display: flex;
    flex-direction: column;
    text-align: right;
    justify-content: end;
}

